# web-hw-09

./: pyproject.toml
BS/: main.py
BS/jsons/: quotes.json
DB_actions/: config.ini  find_quote.py  models.py  redis_cache.py  seed.py
Scrapy/: main.py
Scrapy/jsons/: authors.json  quotes.json
Scrapy/test_spider/test_spider/: items.py  middlewares.py  pipelines.py  settings.py
