[tool.poetry]
name = "web-hw-09"
version = "0.1.0"
description = ""
authors = ["maxafanasiev <80445276+maxafanasiev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw_09"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
lxml = "^4.9.3"
mongoengine = "^0.27.0"
redis = "^4.6.0"
redis-lru = "^0.1.2"
scrapy = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
